<?xml version="1.0"?>
<package>
  <name>msl_flying_ball_detection</name>
  <version>0.0.0</version>
  <description>The msl_flying_ball_detection package</description>
  
  <maintainer email="opfer@vs.uni-kasel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cnc_geometry</build_depend>
  <build_depend>msl_actuator_msgs</build_depend>

  <run_depend>roslib</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cnc_geometry</run_depend>
  <run_depend>msl_actuator_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
