<?xml version="1.0"?>
<package>
  <name>goal_detection</name>
  <version>0.1.0</version>
  <description>The goal_detection package</description>

  <maintainer email="uk030439@student.uni-kassel.de">Team Torerkennung</maintainer>
  <license>MIT</license>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>msl_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>system_config</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>msl_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>system_config</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <export></export>
</package>
