<?xml version="1.0"?>
<package>
  <name>msl_helper_msgs</name>
  <version>0.0.0</version>
  <description>The msl_helper_msgs package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="skubch@vs.uni-kassel.de">Hendrik Skubch</author>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>msl_msgs</build_depend>  
  <build_depend>agent_id</build_depend>  
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>msl_msgs</run_depend>  
  <run_depend>agent_id</run_depend>  

  <export>
  </export>
</package>
